basic/source/comp/loops.cxx
@@ -263,6 +263,8 @@ void SbiParser::With()
     SbiExpression aVar( this, SbOPERAND );
 
     SbiExprNode *pNode = aVar.GetExprNode()->GetRealNode();
+    if (!pNode)
+        return;
     SbiSymDef* pDef = pNode->GetVar();
     // Variant, from 27.6.1997, #41090: empty -> must be Object
     if( pDef->GetType() == SbxVARIANT || pDef->GetType() == SbxEMPTY )
